; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_alarm_intr.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_alarm_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@currently_testing = common dso_local global i64 0, align 8
@blocks = common dso_local global i64 0, align 8
@SIGALRM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%d... \00", align 1
@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @alarm_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alarm_intr(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @currently_testing, align 8
  %4 = load i64, i64* @blocks, align 8
  %5 = icmp sge i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* @SIGALRM, align 4
  %9 = call i32 @signal(i32 %8, void (i32)* @alarm_intr)
  %10 = call i32 @alarm(i32 5)
  %11 = load i64, i64* @currently_testing, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %7
  br label %19

14:                                               ; preds = %7
  %15 = load i64, i64* @currently_testing, align 8
  %16 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i64 %15)
  %17 = load i32, i32* @stdout, align 4
  %18 = call i32 @fflush(i32 %17)
  br label %19

19:                                               ; preds = %14, %13, %6
  ret void
}

declare dso_local i32 @signal(i32, void (i32)*) #1

declare dso_local i32 @alarm(i32) #1

declare dso_local i32 @printf(i8*, i64) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
